# jarvis

./: .env.example  README.md  ha_api_client_documentation  jarvis.py  pyproject.toml  requirements.txt
jarvis/: __init__.py  __main__.py  config.py  daemon.py
jarvis/agents/: __init__.py  _agents.py  base.py
jarvis/clients/: llm_client.py
jarvis/exceptions/: __init__.py
jarvis/gadgets/: __init__.py  google_custom_search_client.py
jarvis/gadgets/clients/: __init__.py
jarvis/modules/: __init__.py  audio_to_text.py  interfaces.py
jarvis/tools/: __init__.py  _tool.py  audio_to_text.py  audio_to_text_in.py  audio_transciever.py  browser.py  google_search.py
jarvis/utils/: __init__.py
tests/: test_audio_transciever.py  test_daemon.py
